# minkipc

./: CMakeLists.txt
.github/actions/loading/: action.yml
.github/workflows/: sync_build.yml
ci/: build_matrix.json
listeners/libfsservice/cmn/: helper.c
qtee_supplicant/: sfs_config.in
